# docker-tag-monitor

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.yml  localtest_ratelimit.py  nginx.conf  patch_js_bundle.py  pyproject.toml  renovate.json5  requirements.txt  rxconfig.py  update_database.py
.github/workflows/: publish-docker-images.yml
alembic/versions/: 1460172de75d_add_scraped_images_table.py  25bafe5405ce_add_imagetoscrape_last_viewed.py  6844092b1f30_initial_database_structure.py  8f9226e14543_add_last_pushed.py  cb274ce175a4_initial_schema.py  cd7bf0db6762_.py
charts/docker-tag-monitor/: Chart.yaml  README.md  augmentedmind-values.yaml  local-values.yaml  values.yaml
charts/docker-tag-monitor/templates/: NOTES.txt  _helpers.tpl  deployment-backend.yaml  deployment-frontend.yaml  ingress.yaml  service-backend.yaml  service-frontend.yaml
database_update/: dockerhub_scraper.py
docker_tag_monitor/: __init__.py  constants.py  decorated_pages.py  docker_tag_monitor.py  main_template.py  models.py  state.py  utils.py
docker_tag_monitor/components/: add_image_tags_form.py  daily_scan_duration_graph.py  daily_scan_summary_graph.py  digests_graph.py  digests_table.py  github_button.py  navbar.py  overview_table.py  search.py  sidebar.py  utils.py
docker_tag_monitor/pages/: image_details.py  overview.py  site_status.py
