[tool.poetry]
name = "docker-tag-monitor"
version = "0.1.0"
description = ""
authors = ["Marius Shekow"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = "0.6.6.post3"
docker-registry-client-async = "1.0.0"
psycopg = {version = "3.2.6", extras = ["binary"]}
durationpy = "0.9"
python-dateutil = "2.9.0.post0"
