[tool.poetry]
name = "docker-tag-monitor"
version = "0.1.0"
description = ""
authors = ["Marius Shekow"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = {version = "0.8.24.post1", extras = ["db"]}
requests = "2.32.5"
docker-registry-client-async = "1.0.3"
psycopg = {version = "3.3.2", extras = ["binary"]}
durationpy = "0.10"
python-dateutil = "2.9.0.post0"
asynciolimiter = "1.2.0"
